# ECE30861-Group18

./: .flake8  .gitignore  .pre-commit-config.yaml  Ali dummy file  README.md  dummy_commit_by_aabougendia.txt  pyproject.toml  requirements.txt  run  url_example.txt
.github/workflows/: ci.yml
src/cli_project/: .coveragerc  cli.py  tester.py
src/cli_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cli_project/adapters/: git_repo.py  huggingface.py  huggingface_inspect.py  huggingface_v0.py  llm_v0.py
src/cli_project/core/: concurrency.py  entities.py  log.py
src/cli_project/io/: ndjson.py
src/cli_project/metrics/: __init__.py  base.py  bus_factor.py  code_quality.py  dataset_and_code.py  dataset_quality.py  license.py  performance_claims.py  ramp_up_time.py  size_score.py  test_code_quality.py  test_dataset_quality.py  test_license_metric.py  test_metric_script.py  test_size_score.py
src/cli_project/urls/: base.py  code_repo.py  hf_model.py
src/modelscore/urls/: base.py  code_repo.py  hf_dataset.py
tests/: .pre-commit-config.yaml  test_concurrency.py  test_initial.py  test_input.py  test_log.py  test_longline.py  test_metrics.py  test_ndjson.py  test_pipeline.py
tests_tmp/: .pre-commit-config.yaml  test_ndjson.py  test_pipeline.py  test_smoke.py
